bynkc/tests/fixtures/positive/56_opaque_methods/input.bynk
commons opacity.methods {
  type Timestamp = opaque Int

  fn Timestamp.before(self, other: Timestamp) -> Bool {
    self.raw < other.raw
  }

  fn Timestamp.equals(self, other: Timestamp) -> Bool {
    self == other
  }
}
