bynkc/tests/fixtures/negative/74_record_spread_wrong_type/input.bynk
commons demo

type Counter = {
  n: Int,
}

fn bad(c: Counter) -> Counter {
  Counter { ...c, n: "no" }
}
